# PerfectStarB

./: CMakeLists.txt  INSTALL.md  Makefile  README  README.md  RELEASE_NOTES.md  VERSION.cmake  indi_perfectstarb.xml  perfectstarb.cpp  perfectstarb.h
Binaries/RPI-Ubuntu/: README  indi_perfectstarb_focus
